tdf#116364: Revert "tdf#113660: show Master Slide label in handout view"

This reverts commit 605b01dc591eaa72788be255baf1f9b9dde76414.

Change-Id: I99a2de6a425b1ecd2e9059a9867adac3fc75e619